Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13429

client login node crash: kernel:LustreError: 190:0:(lov_io.c:121:lov_io_sub_init()) ASSERTION(is_index_within_mirror(lov, index, lio->lis_mirror_index) ) failed: [0x20004f178:0x2f6c:0x0]iot = 6, index = 0, mirror = 0

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.14.0
    • None
    • 3
    • 9223372036854775807

      The assertion is_index_within_mirror() in lov_io_sub_init() should only applied for FLR file, since plain file does not initialize the relevant FLR fields of the layout structure.

            bobijam Zhenyu Xu
            bobijam Zhenyu Xu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: